# Brand-Mention-Reputation-Tracker

./: .env.example  .gitignore  Dockerfile  README.md
aggregator/: .env.example  Dockerfile  package.json
aggregator/src/: server.ts
aggregator/src/config/: env.ts
aggregator/src/utils/: http-client.ts
api-gateway/: .env.example  Dockerfile  README.md  docker-compose.yml  jest.config.cjs  package.json  tsconfig.build.json  tsconfig.json
api-gateway/src/: app.ts  server.ts
api-gateway/src/config/: env.ts  mongo.ts
api-gateway/src/middleware/: error-handler.ts
api-gateway/src/routes/: brand.routes.ts  health.routes.ts  metrics.routes.ts
api-gateway/src/types/: brand.ts  mention.ts
api-gateway/src/utils/: errors.ts  logger.ts  metrics.ts  redis.ts  responses.ts
api-gateway/tests/: brand.routes.test.ts  setup-env.ts
deployment/nginx/: render.conf.template
deployment/scripts/: start-render.sh
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useBrands.ts
frontend/src/lib/: api.ts  (+3 more)
orchestrator/: .env.example  Dockerfile  README.md  docker-compose.orchestrator.yml  package.json  tsconfig.build.json  tsconfig.json
orchestrator/src/: index.ts
orchestrator/tests/: aggregator.test.ts  result_collector.test.ts
tests/: .env.test
worker/: requirements.txt
worker-rs/: Cargo.toml
worker-rs/src/: app.rs  clustering.rs  config.rs  embeddings.rs  lib.rs  llm.rs  logging.rs  main.rs  metrics.rs  processor.rs  queue_consumer.rs  redis_client.rs  service.rs  spike.rs  storage.rs  types.rs
(+63 files in other folders)
