[package]
name = "worker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "tokio"], default-features = false }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
envy = "0.4"
futures = "0.3"
once_cell = "1"
prometheus = "0.13"
redis = { version = "0.24", features = ["tokio-comp", "aio"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
async-trait = "0.1"
